Add list of all 3 recipes to the Home Page. Made unordered list of links to Web Pages about dishes recipes.

--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <ul>
+            <li><a href="recipes/beer-brats.html">The Beer Brats</a></li>
+            <li><a href="recipes/spinach-dip.html"> The Spinach Dip</a></li>
+            <li><a href="recipes/whiskey-burger.html">The Whiskey Burger</a></li>
+        </ul>
     </body>
 </html>
